--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nightwatch-openai-plugin",
   "version": "0.1.3",
-  "description": "",
+  "description": "Nightwatch.js plugin which adds a reporter which uses the OpenAI platform to provide AI-assisted error analysis for test failures.",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "Andrei Rusu",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
@@ -15,5 +15,14 @@
     "marked-terminal": "^6.0.0",
     "stacktrace-parser": "^0.1.10",
     "strip-ansi": "^6.0.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pineviewlabs/nightwatch-openai-plugin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pineviewlabs/nightwatch-openai-plugin/issues"
+  },
+  "homepage": "https://github.com/pineviewlabs/nightwatch-openai-plugin#readme"
 }
